--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,7 @@ Hello, I'm Dena, a passionate Full-stack Developer with a penchant for crafting 
           </section>
         </article>
       </div>
-      <div id="Petroleum_content" class="main-content">
+      <div id="Petroleum_content" style="display: none" class="main-content">
         <!--
         - #NAVBAR
       -->
